chore: 🤖 Added responsiveness

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.theme-transition {
+  transition: background-color 0.8s ease, color 0.3s ease;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
